<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.fausto.droidcafe.MainActivity">
    <item
        android:id="@+id/action_contacto"
        android:icon="@drawable/ic_contacto"
        android:orderInCategory="100"
        android:title="@string/contacto_titulo"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_estado"
        android:icon="@drawable/ic_estado"
        android:orderInCategory="20"
        android:title="@string/estado_titulo"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_orden"
        android:icon="@drawable/ic_carrito_compra"
        android:orderInCategory="11"
        android:title="@string/orden_titulo"
        app:showAsAction="always" />
    <item
        android:id="@+id/acttion_favoritos"
        android:icon="@drawable/ic_favoritos"
        android:orderInCategory="30"
        android:title="@string/favoritos_titulo"
        app:showAsAction="ifRoom" />
</menu>